# tosumu

./: .gitignore  Cargo.toml  DESIGN.md  Database.sln  INSPECT_API.md  LICENSE-APACHE  README.md  REFERENCES.md  SECURITY.md  mkdocs.yml
.github/workflows/: ci.yml
crates/tosumu-bench/: build.rs
crates/tosumu-bench/benches/: btree_vs_sqlite.rs
crates/tosumu-cli/: Cargo.toml
crates/tosumu-cli/src/: cli_tests.rs  error_boundary.rs  inspect_cli_tests.rs  inspect_contract.rs  main.rs  unlock.rs  view.rs
crates/tosumu-cli/src/commands/: dispatch.rs  inspect.rs  mod.rs  protector.rs  store.rs  text.rs
crates/tosumu-cli/src/view/: render.rs  state.rs  tests.rs  watch.rs
crates/tosumu-cli/tests/: error_logging_cli.rs
crates/tosumu-core/: Cargo.toml
crates/tosumu-core/proptest-regressions/: page_store.txt
crates/tosumu-core/src/: btree.rs  crypto.rs  error.rs  format.rs  inspect.rs  lib.rs  log_store.rs  page_store.rs  pager.rs  test_helpers.rs  wal.rs
crates/tosumu-core/src/error/: codes.rs
docs/overrides/css/: extra.css
dotnet/: Invoke-TosumuDotNetChecks.ps1  New-TosumuHarnessTestDatabase.ps1  WpfHarness.DESIGN.md
dotnet/Tosumu.Cli/: Tosumu.Cli.csproj  TosumuCliTool.cs
dotnet/Tosumu.Cli.IntegrationTests/: PackagedCliTests.cs  Tosumu.Cli.IntegrationTests.csproj
dotnet/Tosumu.WpfHarness/: App.xaml  App.xaml.cs  HarnessUnlockSelection.cs  MainWindow.xaml  MainWindow.xaml.cs  Tosumu.WpfHarness.csproj  UnlockPromptWindow.xaml  UnlockPromptWindow.xaml.cs
dotnet/Tosumu.WpfHarness/Assets/TreeView/: tree-view.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aead_frame.rs  fuzz_btree_crash_boundaries.rs  fuzz_keyslot_parse.rs  fuzz_page_decode.rs  fuzz_wal_replay.rs
