[workspace]
resolver = "2"
members = [
    "crates/tosumu-core",
    "crates/tosumu-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arakendo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arakendo/tosumu"
homepage = "https://github.com/Arakendo/tosumu"
readme = "README.md"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
