[package]
name = "tosumu-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_page_decode"
path = "fuzz_targets/fuzz_page_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_btree_operations"
path = "fuzz_targets/fuzz_btree_operations.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wal_replay"
path = "fuzz_targets/fuzz_wal_replay.rs"
test = false
doc = false

[[bin]]
name = "fuzz_btree_crash_boundaries"
path = "fuzz_targets/fuzz_btree_crash_boundaries.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
tosumu-core = { path = "../crates/tosumu-core" }

[profile.release]
debug = 1
