[package]
name = "tosumu-cli"
description = "Command-line interface for the tosumu embedded database."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "tosumu"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.61", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tosumu-core = { path = "../tosumu-core" }
