[package]
name = "tosumu-core"
description = "Core library for the tosumu embedded database (page-based, authenticated-encrypted)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
