[package]
name = "tosumu-core"
description = "Core library for the tosumu embedded database (page-based, authenticated-encrypted)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
chacha20poly1305 = "0.10.1"
crc32fast = "1.4"
getrandom = "0.2"
hkdf = "0.12.4"
sha2 = "0.10.9"
thiserror = "2.0.18"
zeroize = "1.8.2"

[dev-dependencies]
proptest = "1"
